Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="bg-white/5 border border-white/10 p-8 rounded-3xl">
       <h2 class="text-[#E8B923] text-2xl font-bold mb-6 text-center italic text-justify">Nossa Jornada Missionária</h2>
       <div class="space-y-4 text-sm text-gray-200 leading-relaxed">
-        <p>Desde 1993, a Missão Peru tem levado a luz do Evangelho para as nações. Com passagens marcantes em 1999 e 2008, nosso foco é a plantação de igrejas e o cuidado social.</p>
+        <p>Desde 1995, estamos envolvidos a levar a luz do Evangelho para as nações, porem, Deus tem nos chamados especificamente para servir no pais do Peru. Com passagens marcantes em 1999 e 2008, nosso foco é a plantação de igrejas e o cuidado social.</p>
         <p>Estamos construindo algo robusto: capacitação teológica, e-books e cursos para todos os que amam o campo missionário.</p>
         <button onclick="showSection('clube')" class="w-full mt-6 bg-[#15803D] py-4 rounded-xl font-bold text-[10px] uppercase tracking-widest">Ver Cursos e E-books</button>
       </div>
@@ -144,3 +144,4 @@
   </script>
 </body>
 </html>
+
